bug: add 5% padding around h1s at 570px and below to prevent text misalignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -652,6 +652,10 @@ footer p {
         margin: 0 8% 0 8%;
     }
 
+    h1 {
+        padding: 5%;
+    }
+
     table {
         font-size: 80%;
     }
